--- a/index.html
+++ b/index.html
@@ -100,7 +100,18 @@
 <li><a href="http://jatzumivelazco02.000webhostapp.com/">Jatzumi Abigail Velazco Loaiza</a></li>
 <li><a href="https://mijaelrodriguezccorimanya1.000webhostapp.com/">Mijael Rodriguez Ccorimanya</a></li>
 <li><a href="https://juanchoeov20.webcindario.com/">Juan Edison Ocampo Vásquez</a></li>
-
+<li><a href="https://benjamin201920125.000webhostapp.com">Benjamín Quichca Huaman</a></li>
+<li><a href="https://Ricardo12torres34diaz.000webhostapp.com">Ricardo Torres</a></li>
+<li><a href="https://akiranakamuramontenegro.000webhostapp.com">Akira Nakamura</a></li>
+<li><a href="https://jesusmamanipomalaza.000webhostapp.com/JesusMamaniPomalza.html">Jesús Mamani Pomalaza</a></li>
+<li><a href="https://sergioluisfierroneyra.000webhostapp.com/index.html">Sergio Luis Fierro Neyra</a></li>
+<li><a href="https://diegoalexandersandovalrivadeneira.000webhostapp.com/index.html">Diego Alexander Sandoval Rivadeneira</a></li>
+<li><a href="https://perlavalentinatasaycoguerra.000webhostapp.com/">Perla Valentina Tasayco Guerra</a></li>
+<li><a href="https://camilanahomisinchearevalo.000webhostapp.com/">Camila Nahomi Sinche Arévalo Guerra</a></li>
+<li><a href="http://jatzumivelazco02.000webhostapp.com/">Jatzumi Abigail Velazco Loaiza</a></li>
+<li><a href="https://mijaelrodriguezccorimanya1.000webhostapp.com/">Mijael Rodriguez Ccorimanya</a></li>
+<li><a href="https://juanchoeov20.webcindario.com/">Juan Edison Ocampo Vásquez</a></li>
+  
 </ul> 
 
 
